# one

./: .gitattributes  .gitignore  21-simple-storage-service.md  Cargo.toml  config.example.toml
.github/workflows/: ci.yml
docs/: compatibility.md  deploy.md  nginx.md  performance.md
migrations/: 001_initial.sql  002_dead_props.sql
scripts/: compat-smoke.sh  install.sh  package-release.sh  perf-gate.py  perf-gate.sh
src/: config.rs  consistency.rs  lib.rs  locks.rs  main.rs  origin.rs  permissions.rs  router.rs  settings.rs  state.rs  webdav_clients.rs
src/admin/: auth.rs  html.rs  mod.rs  routes.rs
src/auth/: mod.rs  rate_limit.rs
src/dav_handler/: chunked_upload.rs  dispatch.rs  fs.rs  mod.rs  pathmap.rs  report.rs  search.rs  upload_space.rs
src/db/: mod.rs
src/db/migrations/: 001_initial.sql
src/nc_proto/: capabilities.rs  mod.rs
src/nextcloud_proto/: capabilities.rs  login_flow.rs  metrics.rs  mod.rs  ocs.rs  status.rs  user.rs
src/notify_push/: message.rs  mod.rs  routes.rs  runtime.rs  websocket.rs
src/storage/: mod.rs
src/web/: README.md  admin-users.html  admin.css
tests/: consistency.rs  phase0.rs
