[package]
name = "gono-one"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["auth", "trace", "cors"] }

dav-server = "0.11"

rustls = "0.23"
rustls-pemfile = "2"

xattr = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
quick-xml = "0.36"
xmltree = "0.12"

thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
futures-util = "0.3"
http = "1"
filetime = "0.2"
fs2 = "0.4"

path-clean = "1.0"
argon2 = "0.5"
async-trait = "0.1"
tokio-stream = "0.1"
dashmap = "6"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.26"
